2007-09-18  Akim Demaille  <demaille@gostai.com>

	Simplify the grammar
	* src/parser/bison/ugrammar.y (class_declaration): There
	is no reason to accept composite names here.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Unary -
	* src/object/float-class.cc (float_class_sub): Support 1- and 2-ary.
	* src/parser/bison/ugrammar.y (copy): Now has a symbol value.
	(NEG): Rename as...
	(UNARY): this.
	Instead of creating a NegOp, pass the message "-()" to the target.
	Support "copy expr" as some dummy sugar for "expr.copy".
	* src/parser/bison/utoken.l: Adjust.
	* src/ast/ast.yml (NegOp): Remove.
	* src/runner/runner.hh, src/runner/runner.cc: Adjust.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	new_exp -> call
	* src/parser/bison/ugrammar.y (new_exp): Rename as...
	(call): this, it is more logical.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	s/\BExp//g
	* src/ast/ast.yml: Remove all the suffixes "Exp".
	* src/parser/bison/ugrammar.y, src/runner/runner.cc,
	* src/runner/runner.hh: Adjust.

	* src/ast/Makefile.am: Set the svn:ignore property automatically.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	Fix function's scope handling
	"function () exp" is sugar for "function() { exp }".
	* src/parser/bison/ugrammar.y (scope): New.
	Use it instead of always creating scopes, possibly unnecessary.
	Add one missing scope creation for function bodies.
	(formal_arguments): Rename as...
	(formal_args): this.
	* src/ast/ast.yml: Don't print braces for functions, let the body
	do it.

2007-09-18  Akim Demaille  <demaille@gostai.com>

	* src/ast/ast.yml (Nary::push_back): New.
	* src/parser/bison/ugrammar.y: Use it.
	As a side effect, when there is a single expression,
	it is flagged with execution_none, no longer with execution_foreground
	as Benoit Sigoure changed recently with his introduction of
	push_Nary_exp.
	(push_Nary_exp): Remove.

2007-09-16  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add assertions.